# SplashBox-bot-frontend-gtk

./: Makefile.am  README  configure.ac  splashbox-bot-frontend-gtk.desktop.in
data/: splashbox.xpm
src/: Makefile  Makefile.am  debug.h  main.c  main.h  splashbox.xpm  xgrabkey.c  xgrabkey.h
